# ruck

./: .coveragerc  .gitignore  .gitreview  .stestr.conf  .yamllint.yml  CONTRIBUTING.rst  HACKING.rst  README.container  README.rst  ci-requirements.txt  requirements.txt  setup.cfg  tox.ini
.github/workflows/: docker.yml  misc-lint.yml  python-ci.yml
config/: noop.yaml
config/base/: rootfs.yaml
config/debian/bookworm/: README.txt  manifest.yaml
config/debos/: demo.yaml
config/debos/manifests/: software.yaml
config/deploy/: deploy.yaml
config/disk/: disk.yaml
config/installer/: installer.yaml
config/installer/manifests/: software.yaml
config/ostree-image/: image.yaml  ostree.yaml
config/ostree-legacy/: debos.yaml  demo.yaml
config/ostree-legacy/manifests/: software.yaml
config/ostree-legacy/scripts/: setup-uefi-bootloader.sh
config/parted/: demo.yaml
config/uefi-arm64-image/: image.yaml
config/uefi-arm64-image/manifests/: software.yaml
config/uefi-arm64-ostree/: image.yaml
config/uefi-arm64-ostree/manifests/: software.yaml
config/uefi-image/: image.yaml
config/uefi-image/old/: README.txt  bootctl.yaml  deploy.yaml  disk.yaml  ostree.yaml  treefile.yaml
config/uefi-image/partitions/: 10-efi.conf  50-root.conf
config/uefi-ostree/: deploy.yaml  disk.yaml  image.yaml  ostree.yaml  treefile.yaml
config/uefi-ostree/manifests/: parted.yaml  software.yaml
doc/source/: conf.py  index.rst
doc/source/admin/: index.rst
doc/source/cli/: index.rst
doc/source/configuration/: index.rst
doc/source/contributor/: contributing.rst
doc/source/install/: common_configure.rst  (+9 more)
doc/stages/: bootstrap.txt
docker/: Dockerfile
ruck/: __init__.py  archive.py  build.py  config.py  exceptions.py  log.py  mount.py  ostree.py  schema.py  utils.py  vm.py
ruck/cmd/: __init__.py  build.py  init.py  options.py  shell.py  vm.py
ruck/stages/: base.py  bootctl.py  bootloader.py  bootstrap.py  debos.py  deploy.py  disk.py  image.py  noop.py  ostree.py  ostree_deploy.py  ostree_init.py  ostree_prep.py  parted.py  repart.py  unpack.py
ruck/tests/: test_ruck.py  test_validate.py
tools/: build-container.sh  kill-vm.sh  run-arm64-vm.sh  run-container.sh  run-vm.sh
tools/vagrant/: Readme.txt  Vagrantfile  playbook.yml
(+9 files in other folders)
