[metadata]
name = ruck
summary = Debian OS Builder
description_file =
    README.rst
author = Pablo Devs
author_email = charles.short@windriver.com
home_page = https://www.openstack.org/
python_requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[files]
packages =
    ruck
[entry_points]
console_scripts =
    ruck = ruck.cmd.shell:main
ruck.stages = 
    noop = ruck.stages.noop:NoopPlugin
    bootstrap = ruck.stages.bootstrap:BootstrapPlugin
    disk = ruck.stages.disk:DiskPlugin
    deploy = ruck.stages.deploy:DeployPlugin 
    bootctl = ruck.stages.bootctl:SDBootPlugin
    unpack = ruck.stages.unpack:UnpackPlugin
    ostree_init = ruck.stages.ostree:OstreeInitPlugin
    ostree_prep = ruck.stages.ostree:OstreePrepPlugin
